# easyGraph

./: .eslintrc.js  .gitignore  .travis.yml  LICENSE  README.md  build.py  easyGraph.opam  fsm.js  index.html  package-lock.json  package.json
lib/: dune  event.ml  graph.ml  js.ml  xstate.ml
src/: _license.js
src/elements/: link.js  node.js  self_link.js  start_link.js  temporary_link.js
src/export_as/: latex.js  svg.js
src/main/: fsm.js  math.js  save.js
web/: index.php
www/: index.html
